(enhancement) Intellij Code Cleanup